--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@neondatabase/serverless": "^1.0.1",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
