--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/neon-adapter": "^1.10.0",
     "@headlessui/react": "^2.2.4",
     "@neondatabase/serverless": "^1.0.1",
     "next": "15.3.4",
