--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/neon-adapter": "^1.10.0",
     "@headlessui/react": "^2.2.4",
     "@neondatabase/serverless": "^1.0.1",
+    "heroicons": "^2.2.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "pg": "^8.16.3",
